<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityC">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Egyptian Lotus was called Hajer"
        android:src="@drawable/lotus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/my_name"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_name_tv"></LinearLayout>

    <TextView
        android:id="@+id/track_tv"
        style="@style/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/track"
        app:layout_constraintStart_toStartOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/track_title_tv"
        style="@style/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/track_title"
        app:layout_constraintBaseline_toBaselineOf="@+id/track_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/track_tv" />

    <TextView
        android:id="@+id/country_tv"
        style="@style/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@+id/track_tv"
        app:layout_constraintTop_toBottomOf="@+id/track_tv" />

    <TextView
        android:id="@+id/country_name_tv"
        style="@style/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/country_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/country_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/country_tv" />

    <TextView
        android:id="@+id/email_tv"
        style="@style/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/country_tv"
        app:layout_constraintTop_toBottomOf="@+id/country_tv" />

    <TextView
        android:id="@+id/email_address_tv"
        style="@style/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/email_address"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/email_tv" />

    <TextView
        android:id="@+id/phone_tv"
        style="@style/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="@+id/email_tv"
        app:layout_constraintTop_toBottomOf="@+id/email_tv" />

    <TextView
        android:id="@+id/phone_number_tv"
        style="@style/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/phone_number"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/phone_tv" />

    <TextView
        android:id="@+id/slack_tv"
        style="@style/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/slack"
        app:layout_constraintStart_toStartOf="@+id/phone_tv"
        app:layout_constraintTop_toBottomOf="@+id/phone_tv" />

    <TextView
        android:id="@+id/slack_username_tv"
        style="@style/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/slack_username"
        app:layout_constraintBaseline_toBaselineOf="@+id/slack_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/slack_tv" />

</android.support.constraint.ConstraintLayout>