<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityA">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/baumans"
        android:text="@string/a_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/alc_button"
        style="@style/button"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:onClick="goToAboutALC"
        android:text="@string/about_alc_bt"
        app:layout_constraintEnd_toEndOf="@+id/title_textView"
        app:layout_constraintStart_toStartOf="@+id/title_textView"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <Button
        android:id="@+id/profile_button"
        style="@style/button"
        android:layout_width="@dimen/bt_width"
        android:layout_marginTop="20dp"
        android:onClick="goToMyProfile"
        android:text="@string/my_profile_bt"
        app:layout_constraintEnd_toEndOf="@+id/alc_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/alc_button"
        app:layout_constraintTop_toBottomOf="@+id/alc_button" />
</android.support.constraint.ConstraintLayout>